Minor optimizations.